--- a/src/app/products/pages/products/products.component.html
+++ b/src/app/products/pages/products/products.component.html
@@ -1,5 +1,11 @@
 <p>products works!</p>
 <a routerLink="crear">Agregar</a>
-<br>
-<a routerLink="editar/123">Editar</a>
+
+<p *ngFor="let product of products">
+    {{ product | json }}
+    <button (click)="editProduct(product)">Editar</button>
+    <button (click)="deleteProduct(product)">Eliminar</button>
+</p>
+
+
 
