--- a/src/app/products/pages/edit/edit.component.html
+++ b/src/app/products/pages/edit/edit.component.html
@@ -1,2 +1,14 @@
 <p>edit {{id}} product!</p>
 <a routerLink="productos">Volver a Productos</a>
+
+<form [formGroup]="productForm" (ngSubmit)="onCreate()">
+
+    <input type="text" placeholder="ID" [value]="id" disabled>
+    <input type="text" formControlName="name" placeholder="Nombre">
+    <input type="text" formControlName="description" placeholder="Descripción">
+    <input type="text" formControlName="logo" placeholder="Logo">
+    <input type="date" (change)="onDateChange($event)" formControlName="date_release" [min]="formattedDate">
+    <input type="date" [value]="date_revision" disabled>
+    <button type="button" (click)="onReset()" [disabled]="!productForm.touched">Resetear</button>
+    <button type="submit" [disabled]="productForm.invalid">Agregar</button>
+</form>
