--- a/src/app/products/components/products-table/products-table.component.html
+++ b/src/app/products/components/products-table/products-table.component.html
@@ -1,31 +1,69 @@
-<table>
-    <thead>
-        <tr>
-            <th> Logo </th>
-            <th> Nombre del producto </th>
-            <th> Descripcion </th>
-            <th> Fecha de liberacion </th>
-            <th> Fecha de reestructuracion </th>
-            <th> Acciones </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let product of products">
-            <td> {{product.logo}} </td>
-            <td> {{product.name}} </td>
-            <td> {{product.description}} </td>
-            <td> {{product.date_release}} </td>
-            <td> {{product.date_revision}} </td>
-            <td> 
-                <button (click)="editProduct(product)">Editar</button>
-                <button (click)="openDialog(product)">Eliminar</button> 
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="container">
 
-<dialog #dialog>
-    <h2>¿Estás seguro de eliminar el producto {{productToDelete.name}}? </h2>
-    <button (click)="closeDialog()">Cancelar</button>
-    <button (click)="deleteProduct()">Confirmar</button>
+    <div class="search-bar-container">
+
+        <div class="search-bar">
+            <input #inputSearch (keyup)="onSearch(inputSearch.value)" type="text" placeholder="Search..." >
+        </div>
+        <div>
+            <button routerLink="crear">Agregar</button>
+        </div>
+    </div>
+
+    <div class="table-responsive">
+
+        <table>
+            <thead>
+                <tr>
+                    <th> Logo </th>
+                    <th> Nombre del producto </th>
+                    <th> Descripción </th>
+                    <th> Fecha de liberación </th>
+                    <th> Fecha de reestructuración </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let product of products | filter:page:recordsPerPage:search">
+                    <td> {{product.logo}} </td>
+                    <td> {{product.name}} </td>
+                    <td> {{product.description}} </td>
+                    <td> {{product.date_release}} </td>
+                    <td> {{product.date_revision}} </td>
+                    <td> 
+                        <div class="dropdown">
+                            <button class="dropbtn">⋮</button>
+                            <div class="dropdown-content">
+                              <button (click)="editProduct(product)">Editar</button>
+                              <button (click)="openDialog(product)">Eliminar</button> 
+                            </div>
+                          </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="pagination">
+            <div>
+                <span>{{products.length}} Resultados</span>
+            </div>
+            <div>
+                <button (click)="onPrevPage()" [disabled]="page === 0">Anterior</button>
+                <select (change)="onRecordsPerPageChange($event)" name="recordsPerPage" id="recordsPerPage">
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                </select>
+                <button (click)="onNextPage()" [disabled]="((page * recordsPerPage) + recordsPerPage) >= products.length">Siguiente</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<dialog #dialog class="custom-dialog">
+    <p>¿Estás seguro de eliminar el producto <span>{{productToDelete.name}}</span>?</p>
+    <hr>
+    <div class="dialog-buttons">
+        <button class="cancel-button" (click)="closeDialog()">Cancelar</button>
+        <button class="confirm-button" (click)="deleteProduct()">Confirmar</button>
+    </div>
 </dialog>
