--- a/src/app/products/components/products-table/products-table.component.html
+++ b/src/app/products/components/products-table/products-table.component.html
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let product of products | filter:page:recordsPerPage:search">
-                    <td> {{product.logo}} </td>
+                    <td> <img [src]="product.logo" [alt]="product.name" [ngStyle]="{'border-radius': '50%', 'width': '36px', 'height': '36px'}"> </td>
                     <td> {{product.name}} </td>
                     <td> {{product.description}} </td>
                     <td> {{product.date_release | date:'dd/MM/YYYY'}} </td>
@@ -44,16 +44,22 @@
         </table>
         <div class="pagination">
             <div>
-                <span>{{(products | filter:page:recordsPerPage:search).length}} Resultados</span>
+                <span *ngIf="search != '' else NotSearch">{{(products | filter:page:recordsPerPage:search).length}} Resultados</span>
+                <ng-template #NotSearch>
+                    <span>{{products.length}} Resultados</span>
+                </ng-template>
+                
             </div>
             <div>
-                <button (click)="onPrevPage()" [disabled]="page === 0">Anterior</button>
-                <select (change)="onRecordsPerPageChange($event)" name="recordsPerPage" id="recordsPerPage">
+                <button class="cancel-button pagination-button" (click)="onPrevPage()" [disabled]="page === 0 || search != ''">Anterior</button>
+                    &nbsp;
+                <select class="pagination-select" (change)="onRecordsPerPageChange($event)" name="recordsPerPage" id="recordsPerPage">
                     <option value="5">5</option>
                     <option value="10">10</option>
                     <option value="20">20</option>
                 </select>
-                <button (click)="onNextPage()" [disabled]="((page * recordsPerPage) + recordsPerPage) >= products.length">Siguiente</button>
+                    &nbsp;
+                <button class="confirm-button pagination-button" (click)="onNextPage()" [disabled]="((page * recordsPerPage) + recordsPerPage) >= products.length || search != ''">Siguiente</button>
             </div>
         </div>
     </div>
