--- a/src/app/products/components/products-table/products-table.component.html
+++ b/src/app/products/components/products-table/products-table.component.html
@@ -73,3 +73,5 @@
         <button class="confirm-button" (click)="deleteProduct()">Eliminar</button>
     </div>
 </dialog>
+
+<app-snackbar #snackbar></app-snackbar>
