--- a/src/app/products/pages/create/create.component.html
+++ b/src/app/products/pages/create/create.component.html
@@ -1,5 +1,6 @@
 
 <app-product-form formTitle="Formulario de Registro" (onSubmitEvent)="onCreate($event)"></app-product-form>
 
+<app-snackbar #snackbar></app-snackbar>
 
 
