--- a/src/app/products/pages/edit/edit.component.html
+++ b/src/app/products/pages/edit/edit.component.html
@@ -1,2 +1,4 @@
 
 <app-product-form formTitle="Formulario de Edición" [id]="id" (onSubmitEvent)="onCreate($event)"></app-product-form>
+
+<app-snackbar #snackbar></app-snackbar>
