--- a/src/app/products/components/product-form/product-form.component.css
+++ b/src/app/products/components/product-form/product-form.component.css
@@ -78,9 +78,17 @@ h1 {
     text-decoration: none;
     background-color: #F9DE4B;
     font-size: small;
+    font-weight: bold;
     color: #767774;
     padding: 9px;
     border-radius: 3px;
+}
+
+.input-erros{
+    color: red;
+    display: block;
+    margin-top: 6px;
+    font-size: small;
 }
 
 /* You can add more responsiveness as needed */
