eliminando hojas de estilo no usadas

--- a/src/app/home/home-page.component.html
+++ b/src/app/home/home-page.component.html
@@ -1,2 +1,6 @@
-<p>home-page works!</p>
-<a routerLink="productos">Ir a Productos</a>
+<div class="container">
+    
+    <img class="logo" src="https://i.revistapym.com.co/old/2018/09/Pichincha-nueva-imagen.jpg" alt="Banco Pichincha Logo">
+    <button routerLink="productos">Ingresar</button>
+    
+</div>
