--- a/src/app/products/layout/layout.component.css
+++ b/src/app/products/layout/layout.component.css
@@ -12,3 +12,16 @@
     display: block;
     margin: 0 auto;
 }
+
+.home-button{
+    position: fixed;
+    bottom: 9px;
+    left: 9px;
+    background-color: #F4F6F9;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    padding: 9px 9px;
+}
+.home-button a{
+    font-size: x-large;
+}
