--- a/src/app/products/layout/layout.component.css
+++ b/src/app/products/layout/layout.component.css
@@ -21,7 +21,13 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     padding: 9px 9px;
+    transition: transform 300ms, background-color 300ms;
 }
 .home-button a{
     font-size: x-large;
+}
+
+.home-button:hover{
+    transform: translateY(-3px);
+    background-color: #fff;
 }
