--- a/src/app/products/pages/products/products.component.html
+++ b/src/app/products/pages/products/products.component.html
@@ -1,3 +1,4 @@
 
 <app-products-table [products]="products" (onProductDelete)="getProducts()"> </app-products-table>
 
+<app-snackbar #snackbar></app-snackbar>
