--- a/src/app/home/home-page.component.css
+++ b/src/app/home/home-page.component.css
@@ -33,6 +33,10 @@ button:hover{
 }
 
 @keyframes bounce {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(3px); }
+    0%, 100% { 
+        transform: translateY(0); 
+    }
+    50% { 
+        transform: translateY(3px); 
+    }
 }
